# open-strategy

./: .gitignore  CMakeLists.txt  README.md
include/: ability_helpers.h  camera_helpers.h  components.h  destruction_helpers.h  file_helpers.h  game_context.h  map_helpers.h  math_helpers.h  networking_helpers.h  obstacle_helpers.h  resource_dir.h  ui_helpers.h  unit_helpers.h  util_helpers.h  vector2_extensions.h
resources/config/: game_setup.json  obstacle_templates.json  unit_templates.json
resources/maps/: dev_map.json
src/: ability_helpers.cpp  camera_helpers.cpp  destruction_helpers.cpp  file_helpers.cpp  main.cpp  map_helpers.cpp  math_helpers.cpp  networking_helpers.cpp  obstacle_helpers.cpp  ui_helpers.cpp  unit_helpers.cpp  util_helpers.cpp
